--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,15 +3,15 @@ on: [workflow_call, workflow_dispatch]
 
 jobs:
   run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-java@v3.6.0
+      - uses: actions/setup-java@v3.9.0
         with:
           distribution: "zulu"
           java-version: "17"
 
       - name: Checkout
-        uses: actions/checkout@v3.1.0
+        uses: actions/checkout@v3.2.0
         with:
           fetch-depth: 0
           submodules: true
@@ -90,7 +90,7 @@ jobs:
 
           find . -name "*-update.json" | grep . || : >dummy.json
 
-      - uses: stefanzweifel/git-auto-commit-action@v4.15.4
+      - uses: stefanzweifel/git-auto-commit-action@v4.16.0
         with:
           branch: update
           skip_checkout: true
