--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ enabled = true                                                            # add 
 build-mode = "both"                                                       # 'both', 'apk' or 'module'
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"    # whitespace seperated list of patches to exclude
 included-patches = "materialyou force-premium-heading"                    # whitespace seperated list of patches to include
-version = "auto"                                                          # 'auto', 'latest' or a custom one like '17.40.41'
+version = "18.01.35"                                                          # 'auto', 'latest' or a custom one like '17.40.41'
 exclusive-patches = false                                                 # excludes all patches by default
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -26,7 +26,7 @@ enabled = true
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-afn-blue materialyou force-premium-heading"
-version = "auto"
+version = "18.01.35"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -39,7 +39,7 @@ enabled = true
 build-mode = "both"
 excluded-patches = "custom-branding-name"
 included-patches = "materialyou force-premium-heading"
-version = "auto"
+version = "18.01.35"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -52,7 +52,7 @@ enabled = true
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-revancify materialyou force-premium-heading"
-version = "auto"
+version = "18.01.35"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
