--- a/config.toml
+++ b/config.toml
@@ -22,11 +22,11 @@ merge-integrations = true
 rip-libs = true
 
 [YouTube-blue]
-enabled = true
+enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-afn-blue materialyou force-premium-heading"
-version = "18.01.35"
+version = "auto"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -35,11 +35,11 @@ merge-integrations = true
 rip-libs = true
 
 [YouTube-red]
-enabled = true
+enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-name"
 included-patches = "materialyou force-premium-heading"
-version = "18.01.35"
+version = "auto"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -48,11 +48,11 @@ merge-integrations = true
 rip-libs = true
 
 [YouTube-revancify]
-enabled = true
+enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-revancify materialyou force-premium-heading"
-version = "18.01.35"
+version = "auto"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -73,6 +73,7 @@ merge-integrations = true
 arch = "arm64-v8a"
 
 [Music-arm64-red]
+enabled = false
 build-mode = "both"
 app-name = "Music-red"
 excluded-patches = ""
@@ -85,6 +86,7 @@ merge-integrations = true
 arch = "arm64-v8a"
 
 [Music-arm64-blue]
+enabled = false
 build-mode = "both"
 app-name = "Music-blue"
 excluded-patches = "custom-branding-music-red"
@@ -109,6 +111,7 @@ merge-integrations = true
 arch = "arm-v7a"
 
 [Music-arm-red]
+enabled = false
 build-mode = "both"
 app-name = "Music-red"
 excluded-patches = ""
@@ -121,6 +124,7 @@ merge-integrations = true
 arch = "arm-v7a"
 
 [Music-arm-blue]
+enabled = false
 build-mode = "both"
 app-name = "Music-blue"
 excluded-patches = "custom-branding-music-red"
