Use latest instead of auto in YT Music version

--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ build-mode = "both"
 app-name = "Music"
 excluded-patches = "custom-branding-music-red"
 included-patches = ""
-version = "auto"
+version = "latest"
 microg-patch = "music-microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrvx-magisk"
@@ -77,7 +77,7 @@ build-mode = "both"
 app-name = "Music-red"
 excluded-patches = ""
 included-patches = ""
-version = "auto"
+version = "latest"
 microg-patch = "music-microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrvx-magisk"
@@ -90,7 +90,7 @@ build-mode = "both"
 app-name = "Music-blue"
 excluded-patches = "custom-branding-music-red"
 included-patches = "custom-branding-music-revancify"
-version = "auto"
+version = "latest"
 microg-patch = "music-microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrvx-magisk"
@@ -102,7 +102,7 @@ build-mode = "both"
 app-name = "Music"
 excluded-patches = "custom-branding-music-red"
 included-patches = ""
-version = "auto"
+version = "latest"
 microg-patch = "music-microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrvx-arm-magisk"
@@ -115,7 +115,7 @@ build-mode = "both"
 app-name = "Music-red"
 excluded-patches = ""
 included-patches = ""
-version = "auto"
+version = "latest"
 microg-patch = "music-microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrvx-magisk"
@@ -128,7 +128,7 @@ build-mode = "both"
 app-name = "Music-blue"
 excluded-patches = "custom-branding-music-red"
 included-patches = "custom-branding-music-revancify"
-version = "auto"
+version = "latest"
 microg-patch = "music-microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
 module-prop-name = "ytmusicrvx-magisk"
