Change to auto until this issue gets fixed

--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ enabled = true                                                            # add 
 build-mode = "both"                                                       # 'both', 'apk' or 'module'
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"    # whitespace seperated list of patches to exclude (multiline strings are not supported)
 included-patches = "materialyou force-premium-heading"                    # whitespace seperated list of patches to include
-version = "latest"                                                          # 'auto', 'auto' or a custom one like '17.40.41'
+version = "auto"                                                          # 'auto', 'auto' or a custom one like '17.40.41'
 exclusive-patches = false                                                 # excludes all patches by default
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -24,7 +24,7 @@ enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-afn-blue materialyou force-premium-heading"
-version = "latest"
+version = "auto"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -37,7 +37,7 @@ enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-name"
 included-patches = "materialyou force-premium-heading"
-version = "latest"
+version = "auto"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -50,7 +50,7 @@ enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-revancify materialyou force-premium-heading"
-version = "latest"
+version = "auto"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
