--- a/config.toml
+++ b/config.toml
@@ -8,24 +8,24 @@ update-prebuilts = true       # dont touch this
 build-mindetach-module = true
 
 
-[YouTube]
+[YouTube-beta]
 enabled = true                                                            # add 'enabled = false' key to entries to not build them
 build-mode = "both"                                                       # 'both', 'apk' or 'module'
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"    # whitespace seperated list of patches to exclude (multiline strings are not supported)
 included-patches = "materialyou force-premium-heading"                    # whitespace seperated list of patches to include
-version = "auto"                                                          # 'auto', 'auto' or a custom one like '17.40.41'
+version = "latest"                                                        # 'auto', 'auto' or a custom one like '17.40.41'
 exclusive-patches = false                                                 # excludes all patches by default
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 module-prop-name = "ytrvx-magisk"
 merge-integrations = true
 
-[YouTube-blue]
+[YouTube-blue-beta]
 enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-afn-blue materialyou force-premium-heading"
-version = "auto"
+version = "latest"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -33,12 +33,12 @@ module-prop-name = "ytrvx-magisk"
 merge-integrations = true
 rip-libs = true
 
-[YouTube-red]
+[YouTube-red-beta]
 enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-name"
 included-patches = "materialyou force-premium-heading"
-version = "auto"
+version = "latest"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
@@ -46,12 +46,12 @@ module-prop-name = "ytrvx-magisk"
 merge-integrations = true
 rip-libs = true
 
-[YouTube-revancify]
+[YouTube-revancify-beta]
 enabled = false
 build-mode = "both"
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"
 included-patches = "custom-branding-icon-revancify materialyou force-premium-heading"
-version = "auto"
+version = "latest"
 exclusive-patches = false
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
