--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           is_youtube_latest() {
             v=$(toml_get "$(toml_get_table "YouTube")" "version") || version=""
             if [ "$v" = latest ]; then
-              declare -r cur_yt=$(sed -n 's/.*YouTube: \(.*\)/\1/p' build.md | xargs)
+              declare -r cur_yt=$(sed -n 's/.*YouTube: \(.*\)/\1/p' build-beta.md | xargs)
               [ -z "$cur_yt" ] && return 1 # empty, fail=>dont build
               declare -r last_ver=$(get_apk_vers "https://www.apkmirror.com/uploads/?appcategory=youtube" | get_largest_ver)
 
@@ -38,7 +38,7 @@ jobs:
           is_patches_latest() {
             declare -r last_patches_url=$(wget -nv --header="Authorization: token ${{ secrets.GITHUB_TOKEN }}" -O- https://api.github.com/repos/inotia00/revanced-patches/releases/latest | json_get 'browser_download_url' | grep 'jar')
             declare -r last_patches=${last_patches_url##*/}
-            cur_patches=$(sed -n 's/.*Patches: \(.*\)/\1/p' build.md | xargs)
+            cur_patches=$(sed -n 's/.*Patches: \(.*\)/\1/p' build-beta.md | xargs)
 
             echo "Current patches version: $cur_patches"
             echo "Latest patches version: $last_patches"
