--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ enabled = true                                                            # add 
 build-mode = "both"                                                       # 'both', 'apk' or 'module'
 excluded-patches = "custom-branding-icon-afn-red custom-branding-name"    # whitespace seperated list of patches to exclude (multiline strings are not supported)
 included-patches = "materialyou force-premium-heading"                    # whitespace seperated list of patches to include
-version = "latest"                                                        # 'auto', 'auto' or a custom one like '17.40.41'
+version = "18.02.34"                                                        # 'auto', 'auto' or a custom one like '17.40.41'
 exclusive-patches = false                                                 # excludes all patches by default
 microg-patch = "microg-support"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
